# library_cleanup

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USAGE.md  pyproject.toml
.claude/: launch.json
.design-sync/: config.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
app/: .gitignore  DISTRIBUTION.md  LICENSE  README.md  SECURITY.md  pyproject.toml
app/design/: DESIGN_BRIEF.md
app/design/website/: index.html  portfolio.html  privacy.html  selects-privacy.html  selects.html
app/design/website/site/: 404.html  DEPLOY.md  index.html  netlify.toml  robots.txt  sitemap.xml
app/design/website/site/library-cleanup/: index.html
app/design/website/site/privacy/: index.html
app/design/website/site/selects/: index.html
app/design/website/site/selects/privacy/: index.html
app/scripts/: build-signed-dmg.sh  bump-version.py  dmg-settings.py  make-dmg-background.py  released-requirement.txt  setup-signing.sh
app/src/photocleanup/: __main__.py  app.py  delete.py  diagnostics.py  engine.py  learning.py  server.py  store.py  updater.py
app/src/photocleanup/resources/: libraryclean.icns
app/src/photocleanup/web/: index.html
app/src/photocleanup/web/static/: app.css  app.js  tokens.css
app/tests/: factories.py  test_delete.py  test_diagnostics.py  test_engine.py  test_privacy_invariants.py  test_release_hygiene.py  test_rescan.py  test_service.py  test_store.py  test_updater.py
app/wheels/: SHA256SUMS  bitmath-1.4.0.1-py3-none-any.whl
design_handoff_library_cleanup/: Brand & Icon.dc.html  Home.dc.html  README.md  Review Grid.dc.html
photo_cleanup/: __init__.py  analyze.py  apply.py  cli.py  cluster.py  embedding.py  expired.py  feedback.py  fixtures.py  lexicon.py  model.py  quality.py  report.py  scan.py  screenshots.py  video.py
tests/: conftest.py  test_apply.py  test_cli.py  test_cluster.py  test_embedding_cache.py  test_expired.py  test_feedback.py  test_fixtures.py  test_scan.py  test_screenshots.py  test_video.py
tests/fixtures/: dedup_fixtures.json
