[project]
name = "photo-cleanup"
version = "0.1.0"
description = "On-device dedup & work-screenshot triage for Apple Photos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "numpy>=2.4.6",
    "osxphotos>=0.76.1",
    "pillow>=12.2.0",
]

[project.scripts]
photo-cleanup = "photo_cleanup.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# Make the additive app/ package importable in tests without installing it.
pythonpath = ["app/src"]

[dependency-groups]
dev = [
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "uvicorn>=0.49.0",
]
