[project]
name = "library-cleanup"
version = "0.1.0"
description = "On-device dedup & work-screenshot triage for Apple Photos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "numpy>=2.4.6",
    "osxphotos>=0.76.1",
    "pillow>=12.2.0",
]

[project.scripts]
library-cleanup = "photo_cleanup.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project is named "library-cleanup" but the importable package is photo_cleanup
# (renaming the package would be a large, unrelated refactor) — point the build at it.
[tool.hatch.build.targets.wheel]
packages = ["photo_cleanup"]

[tool.pytest.ini_options]
# Make the additive app/ package importable in tests without installing it.
pythonpath = ["app/src"]

[dependency-groups]
dev = [
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "uvicorn>=0.49.0",
]
